--- a/html/reader.html
+++ b/html/reader.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tailwind Starter Template - Minimal Blog: Tailwind Toolbox</title>
+    <title>Series Name</title>
     <meta name="author" content="name" />
     <meta name="description" content="description here" />
     <meta name="keywords" content="keywords,here" />
@@ -109,7 +109,7 @@
 				<p class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
 			</div>
 			<div class="justify-end">
-				<button class="bg-transparent border border-gray-500 hover:border-green-500 text-xs text-gray-500 hover:text-green-500 font-bold py-2 px-4 rounded-full">Learn More</button>
+				<button class="bg-transparent border border-gray-500 hover:border-green-500 text-xs text-gray-500 hover:text-green-500 font-bold py-2 px-4 rounded-full">Follow</button>
 			</div>
 		</div>
 		<!--/Author-->
@@ -122,11 +122,11 @@
 		<div class="font-sans flex justify-between content-center px-4 pb-12">
 			<div class="text-left">
 				<span class="text-xs md:text-sm font-normal text-gray-600">&lt; Previous Chapter</span><br>
-				<p><a href="#" class="break-normal text-base md:text-sm text-green-500 font-bold no-underline hover:underline">kill the MC</a></p>
+				<p><a href="#" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline">kill the MC</a></p>
 			</div>
 			<div class="text-right">
 				<span class="text-xs md:text-sm font-normal text-gray-600">Next Chapter &gt;</span><br>
-				<p><a href="#" class="break-normal text-base md:text-sm text-green-500 font-bold no-underline hover:underline">Revive the MC</a></p>
+				<p><a href="#" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline">Revive the MC</a></p>
 			</div>
 		</div>
 
