--- a/html/reader.html
+++ b/html/reader.html
@@ -64,7 +64,7 @@
 
 			<!--Title-->
 			<div class="font-sans">
-				<p class="text-base md:text-sm text-green-500 font-bold">&lt; <a href="#" class="text-base md:text-sm text-green-500 font-bold no-underline hover:underline">BACK TO HOME</a></p>
+				<p class="text-base md:text-sm text-cyan-500 font-bold">&lt; <a href="#" class="text-base md:text-sm text-cyan-500 font-bold no-underline hover:underline">BACK TO HOME</a></p>
 						<h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Where the MC</h1>
 						<p class="text-sm md:text-base font-normal text-gray-600">Published 19 February 2022</p>
 			</div>
