--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Series Name</title>
+    <title id="title"></title>
     <meta name="author" content="name" />
     <meta name="description" content="description here" />
     <meta name="keywords" content="keywords,here" />
@@ -27,7 +27,7 @@
 		<div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
 			<div class="pl-4">
-				<a class="text-gray-900 text-base no-underline hover:no-underline font-extrabold text-xl" href="/">
+				<a class="text-gray-900 text-base no-underline hover:no-underline font-extrabold" href="/">
 					YUME
 				</a>
 			</div>
@@ -41,7 +41,7 @@
 				</button>
 			</div>
 
-			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
+			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
 				<ul class="list-reset lg:flex justify-end flex-1 items-center">
 					<li class="mr-3">
 						<a class="inline-block py-2 px-4 text-gray-900 font-bold no-underline" href="#">Active</a>
@@ -65,17 +65,12 @@
 			<!--Title-->
 			<div class="font-sans">
 				<p class="text-base md:text-sm text-cyan-500 font-bold">&lt; <a href="#" class="text-base md:text-sm text-cyan-500 font-bold no-underline hover:underline">BACK TO HOME</a></p>
-						<h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Where the MC</h1>
-						<p class="text-sm md:text-base font-normal text-gray-600">Published 19 February 2022</p>
+						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl"></h1>
+						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-600"></p>
 			</div>
 
-			<p class="py-6">Sed dignissim lectus ut tincidunt vulputate. Fusce tincidunt lacus purus, in mattis tortor sollicitudin pretium. Phasellus at diam posuere, scelerisque nisl sit amet, tincidunt urna. Cras nisi diam, pulvinar ut molestie eget, eleifend ac magna. Sed at lorem condimentum, dignissim lorem eu, blandit massa. Phasellus eleifend turpis vel erat bibendum scelerisque. Maecenas id risus dictum, rhoncus odio vitae, maximus purus. Etiam efficitur dolor in dolor molestie ornare. Aenean pulvinar diam nec neque tincidunt, vitae molestie quam fermentum. Donec ac pretium diam. Suspendisse sed odio risus. Nunc nec luctus nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis nec nulla eget sem dictum elementum.</p>
-
-			<ol>
-				<li class="py-3">Maecenas accumsan lacus sit amet elementum porta. Aliquam eu libero lectus. Fusce vehicula dictum mi. In non dolor at sem ullamcorper venenatis ut sed dui. Ut ut est quam. Suspendisse quam quam, commodo sit amet placerat in, interdum a ipsum. Morbi sit amet tellus scelerisque tortor semper posuere.</li>
-				<li class="py-3">Morbi varius posuere blandit. Praesent gravida bibendum neque eget commodo. Duis auctor ornare mauris, eu accumsan odio viverra in. Proin sagittis maximus pharetra. Nullam lorem mauris, faucibus ut odio tempus, ultrices aliquet ex. Nam id quam eget ipsum luctus hendrerit. Ut eros magna, eleifend ac ornare vulputate, pretium nec felis.</li>
-				<li class="py-3">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc vitae pretium elit. Cras leo mauris, tristique in risus ac, tristique rutrum velit. Mauris accumsan tempor felis vitae gravida. Cras egestas convallis malesuada. Etiam ac ante id tortor vulputate pretium. Maecenas vel sapien suscipit, elementum odio et, consequat tellus.</li>
-			</ol>
+			<div id="editorjs"></div>
+			
 		</div>
 
         <div class="flex flex-row  items-center gap-8">
@@ -105,7 +100,7 @@
 		<div class="flex w-full items-center font-sans px-4 py-12">
 			<img class="w-10 h-10 rounded-full mr-4" src="http://i.pravatar.cc/300" alt="Avatar of Author">
 			<div class="flex-1 px-2">
-				<p class="text-base font-bold text-base md:text-xl leading-none mb-2">BY KAIZEN JAIN</p>
+				<p class="text-base font-bold md:text-xl leading-none mb-2">BY KAIZEN JAIN</p>
 				<p class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
 			</div>
 			<div class="justify-end">
@@ -140,7 +135,7 @@
                   <div class="w-full md:w-full px-3 mb-2 mt-2">
                      <textarea class="bg-gray-100 rounded border border-gray-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment' required></textarea>
                   </div>
-                  <div class="w-full md:w-full flex items-start md:w-full px-3">
+                  <div class="w-full md:w-full flex items-start px-3">
                      <div class="flex items-start w-1/2 text-gray-700 px-2 mr-auto">
                         <svg fill="none" class="w-5 h-5 text-gray-600 mr-1" viewBox="0 0 24 24" stroke="currentColor">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
@@ -283,6 +278,13 @@
 			document.getElementById("nav-content").classList.toggle("hidden");
 		}
 	</script>
+
+	<script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script defer src="/js/init.js"></script>
+	<script defer src="/js/readNovel.js" type="module"></script>
 
 </body>
 
