--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -89,7 +89,7 @@
 
           		<!--Tags -->
 		<div class="text-base md:text-sm text-gray-500 px-4">
-			Genre: <a href="#" class="text-base md:text-sm text-cyan-500 no-underline hover:underline">Link</a> . <a href="#" class="text-base md:text-sm text-cyan-500 no-underline hover:underline">Link</a>
+			Genre: <a id="genre1" class="text-base md:text-sm text-cyan-500 no-underline hover:underline"></a> . <a id="genre2" class="text-base md:text-sm text-cyan-500 no-underline hover:underline"></a>
 		</div>
 
 
@@ -116,12 +116,12 @@
 		<!--Next & Prev Links-->
 		<div class="font-sans flex justify-between content-center px-4 pb-12">
 			<div class="text-left">
-				<span class="text-xs md:text-sm font-normal text-gray-600">&lt; Previous Chapter</span><br>
-				<p><a href="#" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline">kill the MC</a></p>
+				<!-- <span class="text-xs md:text-sm font-normal text-gray-600">&lt; Previous Chapter</span><br> -->
+				<p><a id="prevChap" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a></p>
 			</div>
 			<div class="text-right">
-				<span class="text-xs md:text-sm font-normal text-gray-600">Next Chapter &gt;</span><br>
-				<p><a href="#" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline">Revive the MC</a></p>
+				<!-- <span class="text-xs md:text-sm font-normal text-gray-600">Next Chapter &gt;</span><br> -->
+				<p><a id="nextChap" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a></p>
 			</div>
 		</div>
 
