--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -80,9 +80,6 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                     </svg>
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-						<path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-					  </svg>
                 </div>
               </button>
 
@@ -136,7 +133,7 @@
                <div class="flex flex-wrap -mx-3 mb-6">
                   <h2 class="px-4 pt-3 pb-2 text-gray-800 text-lg">Add a new comment</h2>
                   <div class="w-full md:w-full px-3 mb-2 mt-2">
-                     <textarea class="bg-gray-100 rounded border border-gray-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment' required></textarea>
+                     <textarea id="commentBody" class="bg-gray-100 rounded border border-gray-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment' required></textarea>
                   </div>
                   <div class="w-full md:w-full flex items-start px-3">
                      <div class="flex items-start w-1/2 text-gray-700 px-2 mr-auto">
@@ -146,7 +143,7 @@
                         <p class="text-xs md:text-sm pt-px">No spoilers and maintain language.</p>
                      </div>
                      <div class="-mr-1">
-                        <input type='submit' class="bg-white text-gray-700 font-medium py-1 px-4 border border-gray-400 rounded-lg tracking-wide mr-1 hover:bg-gray-100" value='Post Comment'>
+                        <input onclick="addComment()" type='button' class="bg-white text-gray-700 font-medium py-1 px-4 border border-gray-400 rounded-lg tracking-wide mr-1 hover:bg-gray-100" value='Post Comment'>
                      </div>
                   </div>
                </form>
