--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -44,18 +44,31 @@
 			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20" id="nav-content">
 				<ul class="list-reset lg:flex justify-end flex-1 items-center">
 					<li class="mr-3">
-						<a class="inline-block py-2 px-4 text-gray-900 font-bold no-underline" href="#">Active</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 " href="#">
+							<div class="flex items-center justify-center">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
+									<path d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
+								  </svg> Prev
+							</div>
+						</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">link</a>
+						<a class="inline-block py-2 px-4 text-gray-900 font-bold no-underline" href="#">2</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">link</a>
+						<a class="inline-block text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">
+							<div class="flex items-center justify-center">
+								Next<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+									<path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+								  </svg>
+							</div>
+						</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
+
 
 	<!--Container-->
 	<div class="container w-full md:max-w-3xl mx-auto pt-20">
@@ -127,9 +140,12 @@
 
 
 		<!--/Next & Prev Links-->
-		<button class="mx-auto bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
-			Comments
-		  </button>
+		<div class="grid grid-cols-3">
+			<button class=" col-start-2 mb-3 bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+				Comments
+			  </button>
+		</div>
+
 
         <div class="flex mx-auto items-center justify-center shadow-lg mb-4 max-w-full">
             <form class="w-full max-w-full bg-white rounded-lg px-4 pt-2">
@@ -155,7 +171,7 @@
 		 <div class="antialiased mx-auto max-w-screen-full">
             <h3 class="mb-4 text-lg font-semibold text-gray-900">Comments</h3>
           
-            <div id="commentsContainer" class="space-y-4">
+            <div id="commentsContainer" class="space-y-4 mb-5">
           
               <div class="flex">
                 <div class="flex-shrink-0 mr-3">
