--- a/html/about.html
+++ b/html/about.html
@@ -33,11 +33,11 @@
 							<a href="" class="pt-16 px-6 text-gray-500 font-semibold hover:bg-cyan-500 hover:border-cyan-500 hover:border-b-4 hover:text-white transition-all duration-300">Contact Us</a>
 						</div>
 					<!-- Secondary Navbar items -->
-					<div class="hidden md:flex items-center space-x-3 ">
+					<div id="authButtons" class="hidden md:flex items-center space-x-3 ">
 						<a href="/signin" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
 						<a href="/signup" class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign Up</a>
 					</div>
-					<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+					<div id="signedInElements" class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 						<button type="button" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
 						  <span class="sr-only">View notifications</span>
 						  <!-- Heroicon name: outline/bell -->
@@ -50,7 +50,7 @@
 							<div>
 							<button type="button" onclick="show_hide()" class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
 								<span class="sr-only">Open user menu</span>
-								<img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+								<img id="pfp" class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
 							</button>
 							</div>
 
@@ -68,7 +68,7 @@
 							<!-- Active: "bg-gray-100", Not Active: "" -->
 							<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
 							<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-							<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+							<a class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
 							</div>
 						</div>
 					<!-- Mobile menu button -->
@@ -170,6 +170,8 @@
 		</div>
        -->
 </body>
+<script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script defer src="/js/init.js" type="module"></script>
 <script>
 	function show_hide() {  
