--- a/html/account.html
+++ b/html/account.html
@@ -731,10 +731,10 @@
       </main>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
   <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script defer src="/js/init.js" type="module"></script>
-  <script defer src="/js/dashboard.js" type="module"></script>
   <script>let form = document.getElementById("login");
     form.addEventListener(
         "submit",
