--- a/html/account.html
+++ b/html/account.html
@@ -524,6 +524,26 @@
                               <p    tabindex="0" class=" focus:outline-none text-sm font-light leading-tight text-gray-600 mt-4">Fill in the data in order to recieve payments. <br />Necessary if you are a creator and this info would be kept private.</p>
                               <h2  tabindex="0" class="focus:outline-none text-xl font-semibold leading-7 text-gray-800 mt-10">Personal data</h2>
                               <p tabindex="0" class="focus:outline-none text-sm font-light leading-none text-gray-600 mt-0.5">Your details and place of birth</p>
+                              <style>
+                                /* CHECKBOX TOGGLE SWITCH */
+                                /* @apply rules for documentation, these do not work as inline style */
+                                .toggle-checkbox:checked {
+                                  @apply: right-0 border-green-400;
+                                  right: 0;
+                                  border-color: #68D391;
+                                }
+                                .toggle-checkbox:checked + .toggle-label {
+                                  @apply: bg-green-400;
+                                  background-color: #68D391;
+                                }
+                                </style>
+                                <div class="mt-4">
+                                  <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in">
+                                    <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
+                                    <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
+                                </div>
+                                <label for="toggle" class="text-sm text-gray-700">Creator?</label>
+                                </div>             
                               <div class="mt-8 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">First name</label>
